--- a/css/limit.css
+++ b/css/limit.css
@@ -215,6 +215,7 @@ html{
 	height: .32rem;
 	line-height: .32rem;
 	width: 1rem;
+	text-align: center;
 }
 .yellow{
 	color: #ff7200;
@@ -260,7 +261,9 @@ html{
 	line-height: .6rem;
 }
 .coupon-bottom .coupon-bottom-price .mark.checked{
-	background: #999999;
+	border:1px solid #fe1b5e;
+	background: #fff;
+	color: #fe1b5e;
 }
 .coupon-bottom .expiry-date{
 	font-size: .22rem;
