--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,3 @@
-/*
- * 自定义下拉刷新和上拉加载的结构
- * 
-	//下拉刷新区域
-	<div class="mescroll-downwarp">
-		//可自定义内容
-		<p class="downwarp-tip">↓ 下拉刷新 ↓</p>
-		<img class="downwarp-progress" src="mescroll-progress.png"/>
-		<img class="downwarp-slogan" src="mescroll-slogan.png"/>
-	</div>
-
-	//上拉加载区域
-	<div class="mescroll-upwarp">
-		//加载中..
-		<img class="upwarp-progress mescroll-rotate" src="mescroll-progress.png"/>
-		<img class="upwarp-slogan" src="mescroll-slogan.png"/>
-		//无数据
-		<img class="upwarp-nodata" src="mescroll-nodata.png"/>
-	</div>
- */
 
 /*下拉刷新--提示文本*/
 .mescroll-downwarp .downwarp-tip {
@@ -283,6 +263,9 @@ html{
 .goods-wrapper-item-title-left{
 	display: flex;
 	align-items: center;
+}
+.goods-wrapper-item-title-left h1{
+	font-weight: 400;
 }
 .goods-wrapper-item-title img{
 	width: .33rem;
