--- a/css/reset.css
+++ b/css/reset.css
@@ -73,7 +73,7 @@ ins {
     text-decoration:none;
 }
 
-mark {
+goods-wrapper-item-mark {
     background-color:#ff9;
     color:#000; 
     font-style:italic;
