--- a/option/mescroll-option.css
+++ b/option/mescroll-option.css
@@ -351,7 +351,7 @@ html{
     */	font-size: .28rem;
 	color: #1a1a1a;
 }
-.avatar-list-info .avatar-list-info-title .gray{
+.avatar-list-info .avatar-list-info-title .avatar-list-info-gray{
 	font-size: .22rem;
 	display: block;
 	float: right;
@@ -362,7 +362,7 @@ html{
 	line-height: .45rem;
 	font-size: .22rem;
 }
-.avatar-list-info-top .gray{
+.avatar-list-info-top .avatar-list-info-gray{
 
 }
 .avatar-list-info-bottom{
@@ -377,17 +377,17 @@ html{
 .avatar-list-info-bottom p:first-child{
 	width: 3rem;
 }
-.goods-wrapper-item-title .distance{
+.goods-wrapper-item-title .goods-wrapper-item-title-distance{
 	color: #fe1b5e;
 }
-.gray{
+.avatar-list-info-gray{
 	color: #8b8b8b;
 }
 .avatar-list-info-bottom-price{
 	font-size: .3rem;
 	color: #fe1b5e;
 }
-.avatar-list-info-bottom .gray{
+.avatar-list-info-bottom .avatar-list-info-gray{
 	padding-left: 6%;
 	text-decoration: line-through;
 }
@@ -404,7 +404,7 @@ html{
 	border-radius: .05rem;
 }
 
-.mark{
+.goods-wrapper-item-mark{
 	color: #ff0000;
 	border: 1px solid #ff0000;
 	border-radius: .05rem;
@@ -420,32 +420,32 @@ html{
 	 color: #09cf82;
 	 border-color: #09cf82;
  }
-.coupon-title{
+.cg-coupon-title{
 	color: #333333 !important;
 	font-size: .26rem;
 	font-weight: bold;
 }
-.coupon-bottom{
+.cg-coupon-bottom{
 	flex-direction: column;
 }
-.coupon-bottom-price{
+.cg-coupon-bottom-price{
 	padding-top: .1rem;
 	display: flex;
 	justify-content: space-between;
 	color: #ff0000;
 }
-.coupon-bottom-price p:first-child{
+.cg-coupon-bottom-price p:first-child{
 	padding-top: .12rem;
 }
-.coupon-bottom-price .avatar-list-info-bottom-price{
+.cg-coupon-bottom-price .avatar-list-info-bottom-price{
 	color: #ff0000;
 	font-size: .42rem;
 
 }
-.coupon-bottom-price .gray{
+.cg-coupon-bottom-price .avatar-list-info-gray{
 	text-decoration: none !important;
 }
-.coupon-bottom .coupon-bottom-price .mark{
+.cg-coupon-bottom .coupon-bottom-price .goods-wrapper-item-mark{
 	width: 1.5rem;
 	height: .6rem;
 	background: #fe1b5e;
@@ -456,20 +456,20 @@ html{
 	text-align: center;
 	line-height: .6rem;
 }
-.coupon-bottom .coupon-bottom-price .mark.checked{
+.cg-coupon-bottom .coupon-bottom-price .goods-wrapper-item-mark.checked{
 	background: #999999;
 }
-.coupon-bottom .expiry-date{
+.cg-coupon-bottom .expiry-date{
 	font-size: .22rem;
 	color: #999999;
 	margin: .1rem 0;
 	display: flex;
 	justify-content: space-between;
 }
-.coupon .coupon-title .gray{
+.cg-coupon .cg-coupon-title .avatar-list-info-gray{
 	font-weight: normal !important;
 }
-.coupon {
+.cg-coupon {
 	border-bottom: 1px solid #ececec !important;
 }
 
