--- a/css/coupon.css
+++ b/css/coupon.css
@@ -1,5 +1,5 @@
 
-.coupon-tabs ul{
+.cg-coupon-tabs ul{
 	display: flex;
 	text-align: center;
 	font-size: .24rem;
@@ -7,7 +7,7 @@
 	border-bottom: 1px solid #ececec;
 	position: relative;
 }
-.coupon-tabs .blk{
+.cg-coupon-tabs .blk{
 	content: '';
 	position: absolute;
 	left: 15%;
@@ -17,7 +17,7 @@
 	width: .3rem;
 	height: .03rem;
 }
-.coupon-tabs ul li{
+.cg-coupon-tabs ul li{
 	flex: 1;
 	height: .8rem;
 	line-height: .8rem;
@@ -111,7 +111,7 @@
     */	font-size: .28rem;
 	color: #1a1a1a;
 }
-.avatar-list-info .avatar-list-info-title .gray{
+.avatar-list-info .avatar-list-info-title .avatar-list-info-gray{
 	font-size: .22rem;
 	display: block;
 	float: right;
@@ -122,7 +122,7 @@
 	line-height: .45rem;
 	font-size: .22rem;
 }
-.avatar-list-info-top .gray{
+.avatar-list-info-top .avatar-list-info-gray{
 
 }
 .avatar-list-info-bottom{
@@ -137,17 +137,17 @@
 .avatar-list-info-bottom p:first-child{
 	width: 3rem;
 }
-.goods-wrapper-item-title .distance{
+.goods-wrapper-item-title-distance{
 	color: #fe1b5e;
 }
-.gray{
+.avatar-list-info-gray{
 	color: #8b8b8b;
 }
 .avatar-list-info-bottom-price{
 	font-size: .3rem;
 	color: #fe1b5e;
 }
-.avatar-list-info-bottom .gray{
+.avatar-list-info-bottom .avatar-list-info-gray{
 	padding-left: 6%;
 	text-decoration: line-through;
 }
@@ -164,7 +164,7 @@
 	border-radius: .05rem;
 }
 
-.mark{
+.goods-wrapper-item-mark{
 	color: #ff0000;
 	border: 1px solid #ff0000;
 	border-radius: .05rem;
@@ -180,32 +180,32 @@
 	 color: #09cf82;
 	 border-color: #09cf82;
  }
-.coupon-title{
+.cg-coupon-title{
 	color: #333333 !important;
 	font-size: .26rem;
 	font-weight: bold;
 }
-.coupon-bottom{
+.cg-coupon-bottom{
 	flex-direction: column;
 }
-.coupon-bottom-price{
+.cg-coupon-bottom-price{
 	padding-top: .1rem;
 	display: flex;
 	justify-content: space-between;
 	color: #ff0000;
 }
-.coupon-bottom-price p:first-child{
+.cg-coupon-bottom-price p:first-child{
 	padding-top: .12rem;
 }
-.coupon-bottom-price .avatar-list-info-bottom-price{
+.cg-coupon-bottom-price .avatar-list-info-bottom-price{
 	color: #ff0000;
 	font-size: .42rem;
 
 }
-.coupon-bottom-price .gray{
+.cg-coupon-bottom-price .avatar-list-info-gray{
 	text-decoration-line: none !important;
 }
-.coupon-bottom .coupon-bottom-price .mark{
+.cg-coupon-bottom .cg-coupon-bottom-price .goods-wrapper-item-mark{
 	width: 1.5rem;
 	height: .6rem;
 	background: #fe1b5e;
@@ -216,22 +216,22 @@
 	text-align: center;
 	line-height: .6rem;
 }
-.coupon-bottom .coupon-bottom-price .mark.checked{
+.cg-coupon-bottom .cg-coupon-bottom-price .goods-wrapper-item-mark.checked{
 	border:1px solid #fe1b5e;
 	background: #fff;
 	color: #fe1b5e;
 }
-.coupon-bottom .expiry-date{
+.cg-coupon-bottom .expiry-date{
 	font-size: .22rem;
 	color: #999999;
 	margin: .1rem 0;
 	display: flex;
 	justify-content: space-between;
 }
-.coupon .coupon-title .gray{
+.cg-coupon .cg-coupon-title .avatar-list-info-gray{
 	font-weight: normal !important;
 }
-.coupon {
+.cg-coupon {
 	border-bottom: 1px solid #ececec !important;
 }
 .goods-erro{
