--- a/css/index.css
+++ b/css/index.css
@@ -360,7 +360,7 @@ html{
 }
 .goods-wrapper-item-bottom .count-down span{
 	display: inline-block;
-	width: .36rem;
+	padding: 0 1%;
 	height: .36rem;
 	background: #2c2c2c;
 	color: #fff;
